--- a/frontend-next/Dockerfile.dev
+++ b/frontend-next/Dockerfile.dev
@@ -11,10 +11,12 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
 
 # add app
 COPY . ./
 
+# Expose port 3000 to access the server
+EXPOSE 3000
+
 # start app
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
