--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-router-dom": "^6.22.3"
+    "react": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
