--- a/docker-compose-next.dev.yaml
+++ b/docker-compose-next.dev.yaml
@@ -5,12 +5,10 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
+    volumes:
+      - ./backend:/app
     ports:
       - "3001:3001"
-    env_file:
-      - ./backend/.env
-    volumes:
-      - ./backend:/app  # Mount the backend source directory to /app in the container
     networks:
       - network
 
@@ -18,6 +16,9 @@ services:
     build:
       context: ./frontend-next
       dockerfile: Dockerfile.dev
+    volumes:
+      - ./frontend-next:/app
+      - /app/node_modules
     ports:
       - "3000:3000"
     networks:
