--- a/frontend-next/Dockerfile.dev
+++ b/frontend-next/Dockerfile.dev
@@ -1,15 +1,11 @@
 # pull official base image
-FROM --platform=linux/amd64 node:13.12.0-alpine
+FROM --platform=linux/amd64 node:lts-alpine3.19
 
 # set working directory
 WORKDIR /app
 
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-
 # install app dependencies
 COPY package.json ./
-COPY package-lock.json ./
 RUN npm install --silent
 
 # add app
