--- a/vite/frontend/package.json
+++ b/vite/frontend/package.json
@@ -22,7 +22,8 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.18.0",
     "react-scroll": "^1.9.0",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "vercel": "^39.2.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
